--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -220,6 +220,7 @@ ion-content {
 
         .about__us {
           flex-direction: column;
+          width: 60%;
           position: sticky;
           top: 4.25rem;
           gap: 3rem;
@@ -551,18 +552,29 @@ ion-content {
           height: 100%;
           gap: 4rem;
           align-items: center;
-          justify-items: center;
-          overflow-y: scroll;
-          // padding-right: 2rem;
-          scrollbar-width: none;
+          // justify-items: center;
+          justify-content: center;
+          // overflow-y: scroll;
+          // scrollbar-width: none;
+          padding-inline: 5rem 0;
 
           .project__list {
             display: grid;
-            grid-template-columns: repeat(2, 1fr);
-            grid-auto-rows: 1fr;
+            grid-template-columns: repeat(5, minmax(24rem, 1fr));
+            // grid-auto-rows: 1fr;
+            overflow-x: auto;
+            align-items: center;
             width: 100%;
-            max-width: 50rem;
+            // height: 100%;
+            // max-width: 50rem;
             gap: 2rem;
+            padding-block: 2.5rem;
+            scrollbar-width: none;
+            cursor: grab;
+
+            &:active {
+              cursor: grabbing;
+            }
 
             .project {
               flex-direction: column;
@@ -573,6 +585,7 @@ ion-content {
               backdrop-filter: blur(0.25rem);
               transition: 0.1s;
               cursor: pointer;
+              height: 100%;
 
               &:has(.project:hover) {
                 .project {
