--- a/src/global.css
+++ b/src/global.css
@@ -79,172 +79,19 @@
   height: 0;
   border-top: 1px solid transparent;
   border-bottom: 1px solid transparent;
-  border-right: 165px solid #fff;
-  -o-border-image: linear-gradient(to left, #fff, transparent) 1 100%;
-     border-image: linear-gradient(to left, #fff, transparent) 1 100%;
-  border-radius: 0 2px 2px 0;
-  transform: rotate(30deg);
-  position: absolute;
-  top: 19%;
-  left: 56%;
-  opacity: 0;
-  animation: shooting 14s linear infinite;
-  animation-delay: 11s;
-}
-.meteors .meteor:nth-child(2) {
-  width: 0;
-  height: 0;
-  border-top: 1px solid transparent;
-  border-bottom: 1px solid transparent;
   border-right: 177px solid #fff;
   -o-border-image: linear-gradient(to left, #fff, transparent) 1 100%;
      border-image: linear-gradient(to left, #fff, transparent) 1 100%;
   border-radius: 0 2px 2px 0;
   transform: rotate(30deg);
   position: absolute;
-  top: 49%;
-  left: 66%;
+  top: 20%;
+  left: 63%;
   opacity: 0;
   animation: shooting 14s linear infinite;
-  animation-delay: 4s;
+  animation-delay: 5s;
 }
-.meteors .meteor:nth-child(3) {
-  width: 0;
-  height: 0;
-  border-top: 1px solid transparent;
-  border-bottom: 1px solid transparent;
-  border-right: 105px solid #fff;
-  -o-border-image: linear-gradient(to left, #fff, transparent) 1 100%;
-     border-image: linear-gradient(to left, #fff, transparent) 1 100%;
-  border-radius: 0 2px 2px 0;
-  transform: rotate(30deg);
-  position: absolute;
-  top: 8%;
-  left: 50%;
-  opacity: 0;
-  animation: shooting 11s linear infinite;
-  animation-delay: 2s;
-}
-.meteors .meteor:nth-child(4) {
-  width: 0;
-  height: 0;
-  border-top: 1px solid transparent;
-  border-bottom: 1px solid transparent;
-  border-right: 174px solid #fff;
-  -o-border-image: linear-gradient(to left, #fff, transparent) 1 100%;
-     border-image: linear-gradient(to left, #fff, transparent) 1 100%;
-  border-radius: 0 2px 2px 0;
-  transform: rotate(30deg);
-  position: absolute;
-  top: 64%;
-  left: 58%;
-  opacity: 0;
-  animation: shooting 8s linear infinite;
-  animation-delay: 12s;
-}
-.meteors .meteor:nth-child(5) {
-  width: 0;
-  height: 0;
-  border-top: 1px solid transparent;
-  border-bottom: 1px solid transparent;
-  border-right: 138px solid #fff;
-  -o-border-image: linear-gradient(to left, #fff, transparent) 1 100%;
-     border-image: linear-gradient(to left, #fff, transparent) 1 100%;
-  border-radius: 0 2px 2px 0;
-  transform: rotate(30deg);
-  position: absolute;
-  top: 14%;
-  left: 72%;
-  opacity: 0;
-  animation: shooting 12s linear infinite;
-  animation-delay: 1s;
-}
-.meteors .meteor:nth-child(6) {
-  width: 0;
-  height: 0;
-  border-top: 1px solid transparent;
-  border-bottom: 1px solid transparent;
-  border-right: 128px solid #fff;
-  -o-border-image: linear-gradient(to left, #fff, transparent) 1 100%;
-     border-image: linear-gradient(to left, #fff, transparent) 1 100%;
-  border-radius: 0 2px 2px 0;
-  transform: rotate(30deg);
-  position: absolute;
-  top: 15%;
-  left: 61%;
-  opacity: 0;
-  animation: shooting 13s linear infinite;
-  animation-delay: 7s;
-}
-.meteors .meteor:nth-child(7) {
-  width: 0;
-  height: 0;
-  border-top: 1px solid transparent;
-  border-bottom: 1px solid transparent;
-  border-right: 179px solid #fff;
-  -o-border-image: linear-gradient(to left, #fff, transparent) 1 100%;
-     border-image: linear-gradient(to left, #fff, transparent) 1 100%;
-  border-radius: 0 2px 2px 0;
-  transform: rotate(30deg);
-  position: absolute;
-  top: 65%;
-  left: 58%;
-  opacity: 0;
-  animation: shooting 11s linear infinite;
-  animation-delay: 4s;
-}
-.meteors .meteor:nth-child(8) {
-  width: 0;
-  height: 0;
-  border-top: 1px solid transparent;
-  border-bottom: 1px solid transparent;
-  border-right: 127px solid #fff;
-  -o-border-image: linear-gradient(to left, #fff, transparent) 1 100%;
-     border-image: linear-gradient(to left, #fff, transparent) 1 100%;
-  border-radius: 0 2px 2px 0;
-  transform: rotate(30deg);
-  position: absolute;
-  top: 14%;
-  left: 42%;
-  opacity: 0;
-  animation: shooting 7s linear infinite;
-  animation-delay: 6s;
-}
-.meteors .meteor:nth-child(9) {
-  width: 0;
-  height: 0;
-  border-top: 1px solid transparent;
-  border-bottom: 1px solid transparent;
-  border-right: 190px solid #fff;
-  -o-border-image: linear-gradient(to left, #fff, transparent) 1 100%;
-     border-image: linear-gradient(to left, #fff, transparent) 1 100%;
-  border-radius: 0 2px 2px 0;
-  transform: rotate(30deg);
-  position: absolute;
-  top: 37%;
-  left: 91%;
-  opacity: 0;
-  animation: shooting 8s linear infinite;
-  animation-delay: 10s;
-}
-.meteors .meteor:nth-child(10) {
-  width: 0;
-  height: 0;
-  border-top: 1px solid transparent;
-  border-bottom: 1px solid transparent;
-  border-right: 136px solid #fff;
-  -o-border-image: linear-gradient(to left, #fff, transparent) 1 100%;
-     border-image: linear-gradient(to left, #fff, transparent) 1 100%;
-  border-radius: 0 2px 2px 0;
-  transform: rotate(30deg);
-  position: absolute;
-  top: 78%;
-  left: 71%;
-  opacity: 0;
-  animation: shooting 9s linear infinite;
-  animation-delay: 12s;
-}
-.meteors .meteor:nth-child(11) {
+.meteors .meteor:nth-child(2) {
   width: 0;
   height: 0;
   border-top: 1px solid transparent;
@@ -255,13 +102,98 @@
   border-radius: 0 2px 2px 0;
   transform: rotate(30deg);
   position: absolute;
-  top: 34%;
-  left: 100%;
+  top: 60%;
+  left: 69%;
   opacity: 0;
-  animation: shooting 11s linear infinite;
-  animation-delay: 1s;
+  animation: shooting 7s linear infinite;
+  animation-delay: 7s;
 }
-.meteors .meteor:nth-child(12) {
+.meteors .meteor:nth-child(3) {
+  width: 0;
+  height: 0;
+  border-top: 1px solid transparent;
+  border-bottom: 1px solid transparent;
+  border-right: 145px solid #fff;
+  -o-border-image: linear-gradient(to left, #fff, transparent) 1 100%;
+     border-image: linear-gradient(to left, #fff, transparent) 1 100%;
+  border-radius: 0 2px 2px 0;
+  transform: rotate(30deg);
+  position: absolute;
+  top: 78%;
+  left: 43%;
+  opacity: 0;
+  animation: shooting 7s linear infinite;
+  animation-delay: 11s;
+}
+.meteors .meteor:nth-child(4) {
+  width: 0;
+  height: 0;
+  border-top: 1px solid transparent;
+  border-bottom: 1px solid transparent;
+  border-right: 153px solid #fff;
+  -o-border-image: linear-gradient(to left, #fff, transparent) 1 100%;
+     border-image: linear-gradient(to left, #fff, transparent) 1 100%;
+  border-radius: 0 2px 2px 0;
+  transform: rotate(30deg);
+  position: absolute;
+  top: 2%;
+  left: 56%;
+  opacity: 0;
+  animation: shooting 9s linear infinite;
+  animation-delay: 2s;
+}
+.meteors .meteor:nth-child(5) {
+  width: 0;
+  height: 0;
+  border-top: 1px solid transparent;
+  border-bottom: 1px solid transparent;
+  border-right: 84px solid #fff;
+  -o-border-image: linear-gradient(to left, #fff, transparent) 1 100%;
+     border-image: linear-gradient(to left, #fff, transparent) 1 100%;
+  border-radius: 0 2px 2px 0;
+  transform: rotate(30deg);
+  position: absolute;
+  top: 9%;
+  left: 47%;
+  opacity: 0;
+  animation: shooting 14s linear infinite;
+  animation-delay: 11s;
+}
+.meteors .meteor:nth-child(6) {
+  width: 0;
+  height: 0;
+  border-top: 1px solid transparent;
+  border-bottom: 1px solid transparent;
+  border-right: 191px solid #fff;
+  -o-border-image: linear-gradient(to left, #fff, transparent) 1 100%;
+     border-image: linear-gradient(to left, #fff, transparent) 1 100%;
+  border-radius: 0 2px 2px 0;
+  transform: rotate(30deg);
+  position: absolute;
+  top: 68%;
+  left: 97%;
+  opacity: 0;
+  animation: shooting 8s linear infinite;
+  animation-delay: 7s;
+}
+.meteors .meteor:nth-child(7) {
+  width: 0;
+  height: 0;
+  border-top: 1px solid transparent;
+  border-bottom: 1px solid transparent;
+  border-right: 193px solid #fff;
+  -o-border-image: linear-gradient(to left, #fff, transparent) 1 100%;
+     border-image: linear-gradient(to left, #fff, transparent) 1 100%;
+  border-radius: 0 2px 2px 0;
+  transform: rotate(30deg);
+  position: absolute;
+  top: 65%;
+  left: 45%;
+  opacity: 0;
+  animation: shooting 7s linear infinite;
+  animation-delay: 2s;
+}
+.meteors .meteor:nth-child(8) {
   width: 0;
   height: 0;
   border-top: 1px solid transparent;
@@ -272,8 +204,76 @@
   border-radius: 0 2px 2px 0;
   transform: rotate(30deg);
   position: absolute;
-  top: 65%;
-  left: 69%;
+  top: 8%;
+  left: 70%;
+  opacity: 0;
+  animation: shooting 12s linear infinite;
+  animation-delay: 9s;
+}
+.meteors .meteor:nth-child(9) {
+  width: 0;
+  height: 0;
+  border-top: 1px solid transparent;
+  border-bottom: 1px solid transparent;
+  border-right: 161px solid #fff;
+  -o-border-image: linear-gradient(to left, #fff, transparent) 1 100%;
+     border-image: linear-gradient(to left, #fff, transparent) 1 100%;
+  border-radius: 0 2px 2px 0;
+  transform: rotate(30deg);
+  position: absolute;
+  top: 37%;
+  left: 99%;
+  opacity: 0;
+  animation: shooting 10s linear infinite;
+  animation-delay: 1s;
+}
+.meteors .meteor:nth-child(10) {
+  width: 0;
+  height: 0;
+  border-top: 1px solid transparent;
+  border-bottom: 1px solid transparent;
+  border-right: 137px solid #fff;
+  -o-border-image: linear-gradient(to left, #fff, transparent) 1 100%;
+     border-image: linear-gradient(to left, #fff, transparent) 1 100%;
+  border-radius: 0 2px 2px 0;
+  transform: rotate(30deg);
+  position: absolute;
+  top: 78%;
+  left: 80%;
+  opacity: 0;
+  animation: shooting 12s linear infinite;
+  animation-delay: 12s;
+}
+.meteors .meteor:nth-child(11) {
+  width: 0;
+  height: 0;
+  border-top: 1px solid transparent;
+  border-bottom: 1px solid transparent;
+  border-right: 163px solid #fff;
+  -o-border-image: linear-gradient(to left, #fff, transparent) 1 100%;
+     border-image: linear-gradient(to left, #fff, transparent) 1 100%;
+  border-radius: 0 2px 2px 0;
+  transform: rotate(30deg);
+  position: absolute;
+  top: 58%;
+  left: 44%;
+  opacity: 0;
+  animation: shooting 9s linear infinite;
+  animation-delay: 10s;
+}
+.meteors .meteor:nth-child(12) {
+  width: 0;
+  height: 0;
+  border-top: 1px solid transparent;
+  border-bottom: 1px solid transparent;
+  border-right: 87px solid #fff;
+  -o-border-image: linear-gradient(to left, #fff, transparent) 1 100%;
+     border-image: linear-gradient(to left, #fff, transparent) 1 100%;
+  border-radius: 0 2px 2px 0;
+  transform: rotate(30deg);
+  position: absolute;
+  top: 5%;
+  left: 83%;
   opacity: 0;
   animation: shooting 8s linear infinite;
   animation-delay: 4s;
@@ -346,5 +346,83 @@
   }
   80%, 100% {
     transform: rotateX(0deg);
+  }
+}
+.scroll__down {
+  flex-direction: column !important;
+  position: absolute;
+  left: 5rem;
+  bottom: 0;
+  padding: 3rem;
+  transition: 0.3s;
+}
+.scroll__down:hover .scroll {
+  display: block;
+  font-size: 0.75rem;
+  color: #fff;
+  text-transform: uppercase;
+  white-space: nowrap;
+  opacity: 0.25;
+  animation: pulse 2s linear alternate infinite;
+}
+.scroll__down .scroll {
+  display: none;
+}
+.scroll__down .arrows {
+  flex-direction: column;
+  position: relative;
+}
+.scroll__down .arrows .arrow {
+  position: absolute;
+  width: 28px;
+  height: 8px;
+  opacity: 0;
+  transform: scale3d(0.5, 0.5, 0.5);
+  animation: move 3s ease-out infinite;
+}
+.scroll__down .arrows .arrow:first-child {
+  animation: move 3s ease-out 1s infinite;
+}
+.scroll__down .arrows .arrow:nth-child(2) {
+  animation: move 3s ease-out 2s infinite;
+}
+.scroll__down .arrows .arrow:before, .scroll__down .arrows .arrow:after {
+  content: " ";
+  position: absolute;
+  top: 0;
+  background: #fff;
+  height: 100%;
+  width: 51%;
+}
+.scroll__down .arrows .arrow:before {
+  left: 0;
+  transform: skew(0deg, 30deg);
+}
+.scroll__down .arrows .arrow:after {
+  right: 0;
+  width: 50%;
+  transform: skew(0deg, -30deg);
+}
+
+@keyframes pulse {
+  to {
+    opacity: 1;
+  }
+}
+@keyframes move {
+  25% {
+    opacity: 1;
+  }
+  33% {
+    opacity: 1;
+    transform: translateY(30px);
+  }
+  67% {
+    opacity: 1;
+    transform: translateY(40px);
+  }
+  100% {
+    opacity: 0;
+    transform: translateY(55px) scale3d(0.5, 0.5, 0.5);
   }
 }/*# sourceMappingURL=global.css.map */
