--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -62,6 +62,15 @@
       <div class="avatar">
         <!-- <app-avatar></app-avatar> -->
       </div>
+
+      <div class="scroll__down">
+        <div class="arrows">
+          <div class="arrow"></div>
+          <div class="arrow"></div>
+          <div class="arrow"></div>
+        </div>
+        <span class="scroll">Scroll Down</span>
+      </div>
     </section>
 
     <section id="work" style="display: none">
