--- a/src/global.scss
+++ b/src/global.scss
@@ -213,3 +213,98 @@ $color_meteor: #fff;
     transform: rotateX(0deg);
   }
 }
+
+.scroll__down {
+  flex-direction: column !important;
+  position: absolute;
+  left: 5rem;
+  bottom: 0;
+  padding: 3rem;
+  transition: 0.3s;
+
+  &:hover {
+    .scroll {
+      display: block;
+      font-size: 0.75rem;
+      color: #fff;
+      text-transform: uppercase;
+      white-space: nowrap;
+      opacity: 0.25;
+      animation: pulse 2s linear alternate infinite;
+    }
+  }
+
+  .scroll {
+    display: none;
+  }
+
+  .arrows {
+    flex-direction: column;
+    position: relative;
+
+    .arrow {
+      position: absolute;
+      width: 28px;
+      height: 8px;
+      opacity: 0;
+      transform: scale3d(0.5, 0.5, 0.5);
+      animation: move 3s ease-out infinite;
+
+      &:first-child {
+        animation: move 3s ease-out 1s infinite;
+      }
+
+      &:nth-child(2) {
+        animation: move 3s ease-out 2s infinite;
+      }
+
+      &:before,
+      &:after {
+        content: " ";
+        position: absolute;
+        top: 0;
+        background: #fff;
+        height: 100%;
+        width: 51%;
+      }
+
+      &:before {
+        left: 0;
+        transform: skew(0deg, 30deg);
+      }
+
+      &:after {
+        right: 0;
+        width: 50%;
+        transform: skew(0deg, -30deg);
+      }
+    }
+  }
+}
+
+@keyframes pulse {
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes move {
+  25% {
+    opacity: 1;
+  }
+
+  33% {
+    opacity: 1;
+    transform: translateY(30px);
+  }
+
+  67% {
+    opacity: 1;
+    transform: translateY(40px);
+  }
+
+  100% {
+    opacity: 0;
+    transform: translateY(55px) scale3d(0.5, 0.5, 0.5);
+  }
+}
